# TIMTest

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  qrencode.c
app/src/main/cpp/libqrencode/: bitstream.c  bitstream.h  config.h  mask.c  mask.h  mmask.c  mmask.h  mqrspec.c  mqrspec.h  qrenc.c  qrencode.c  qrencode.h  qrencode_inner.h  qrinput.c  qrinput.h  qrspec.c  qrspec.h  rsecc.c  rsecc.h  split.c  split.h
app/src/main/java/com/example/timtest/: MainActivity.java  QREncode.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
